Fix issue with fixed heading on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,9 @@ header {
     height: 75px;
     position: fixed;
     width: 100%;
+    top: 0;
 }
+
 
 /* for screens 600px and less font-size decreases and header changes in size */
 
